samples/_failures_safe/1761309712_3b3574_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81e9c6d8.c: In function ‘main’:
./samples/SAFE/__tmp_81e9c6d8.c:174:5: error: expected expression at end of input
  174 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_81e9c6d8.c:174:5: error: expected declaration or statement at end of input
